--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-	name = robot3000
+	name = joaocrazy
 	email = 79527341+joao-victor-lab@users.noreply.github.com
 
 [credential "https://github.com"]
@@ -14,22 +14,13 @@
 	defaultBranch = main
 
 [core]
-    pager = delta
+	pager = delta
 
+[color]
+	pager = no
 [interactive]
-    diffFilter = delta --color-only
-
+	diffFilter = delta --color-only
 [delta]
-    navigate = true    # use n and N to move between diff sections
-
-    # delta detects terminal colors automatically; set one of these to disable auto-detection
-    # dark = true
-    # light = true
-
+	navigate = true
 [merge]
-    conflictstyle = diff3
-
-[diff]
-    colorMoved = default
-[safe]
-	directory = /tmp/bat-extras
+	conflictStyle = zdiff3
