--- a/hyprland/.config/hypr/userprefs.conf
+++ b/hyprland/.config/hypr/userprefs.conf
@@ -13,6 +13,7 @@
 # 🔗 See https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us, br
+    kb_variant = intl
     kb_options = ctrl:nocaps
     # follow_mouse = 1
     # sensitivity = 0
